--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </div>
     </section>
     <section class="player player--1">
-        <h2 class="name" id="name--1">Player 1</h2>
+        <h2 class="name" id="name--1">Player 2</h2>
         <p class="score" id="score--1">24</p>
         <div class="current">
             <p class="current-label">Current</p>
@@ -26,7 +26,7 @@
         </div>
     </section>
 
-    <img src="dice-5.png" alt="Playing dice" class="dice">
+    <img src="dice-5.png" alt="Playing dice" class="dice" id="dice">
     <button class="btn btn--new">🔄 New game</button>
     <button class="btn btn--roll">🎲 Roll dice</button>
     <button class="btn btn--hold">📥 Hold</button>
